Added Quiz editing and navigation

--- a/server/views/home.ejs
+++ b/server/views/home.ejs
@@ -20,7 +20,7 @@
     <br>
     Create a new practice quiz:
     <br>
-    <form action = "/createQuiz" method="POST">
+    <form action ="/createQuiz" method="POST">
       <label for="name">Quiz Name</label>
       <input type="text" name="name" id="name">
       <br>
@@ -29,6 +29,10 @@
       <br>
       <input type="submit" value="Create">
     </form>
+    <br>
+    <a href="/getQuizzes">
+      <button>Find Quiz</button>
+    </a>
   </div>
 </body>
 
