Moved ejs rendering to separate router

--- a/server/views/home.ejs
+++ b/server/views/home.ejs
@@ -20,7 +20,7 @@
     <br>
     Create a new practice quiz:
     <br>
-    <form action ="/createQuiz" method="POST">
+    <form action ="/client/createQuiz" method="POST">
       <label for="name">Quiz Name</label>
       <input type="text" name="name" id="name">
       <br>
@@ -30,7 +30,7 @@
       <input type="submit" value="Create">
     </form>
     <br>
-    <a href="/getQuizzes">
+    <a href="/client/getQuizzes">
       <button>Find Quiz</button>
     </a>
   </div>
